# Marketplace-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
.github/workflows/: docker-image-push.yml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: MyCard.js  MySelect.tsx
frontend/src/pages/Marketplace/: AdCard.tsx  AdForm.tsx  MarketPlaceLayout.tsx  Marketplace.js  Marketplace.tsx  MarketplaceFilter.tsx
frontend/src/services/: services.js
src/: config.py  database.py  log_config.yml  main.py  pyproject.toml
src/app/: app.py  config.py
src/crud/: items_crud.py  offre_crud.py  status_crud.py  tag_crud.py  typeOffre_crud.py  users_cruds.py
src/model/: item_user.py
src/models/: items.py  offre_model.py  status.py  status_model.py  tag_model.py  typeOffre_model.py  user.py  user_model.py
src/models/status/: statusCrud.py  statusModel.py  statusSchema.py
src/routers/: informations.py  status.py
src/routes/: health_routes.py  items_routes.py  offre_routes.py  status.routes.py  status_routes.py  tag_routes.py  typeOffre_routes.py  users_routes.py
src/schemas/: items_schema.py  offre_schemas.py  status_schema.py  status_schemas.py  tag_schemas.py  typeOffre_schemas.py  user_schemas.py
src/services/: database.py  s3.py
src/utils/: BaseDb.py
