[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.85.2",
    "flake8>=5.0.4",
    "uvicorn>=0.19.0",
    "PyYAML>=6.0",
    "urllib3>=1.26.12",
    "sqlalchemy>=2.0.12",
    "psycopg2>=2.9.6",
    "psycopg>=3.1.9",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.0",
]

[tool.pdm.scripts]
serve = "python main.py"
deploy = "uvicorn app.app:app --host 0.0.0.0 --port 80"
test = "pytest tests"
lint = "flake8"